--- a/index.html
+++ b/index.html
@@ -36,53 +36,55 @@
       <section id="library-section"></section>
     </main>
     <dialog id="add-book-dialog">
-      <h2>Add a Book</h2>
-      <button commandfor="add-book-dialog" command="close">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="size-6"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M6 18 18 6M6 6l12 12"
-          />
-        </svg>
-      </button>
+      <div class="dialog-content-wrapper">
+        <h2>Add a Book</h2>
+        <button commandfor="add-book-dialog" command="close">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18 18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
 
-      <label for="book-title">Title</label>
-      <input
-        type="text"
-        name="book-title"
-        id="book-title"
-        placeholder="Book title"
-      />
-      <label for="author-name">Author</label>
-      <input
-        type="text"
-        name="author-name"
-        id="author-name"
-        placeholder="Author name"
-      />
-      <label for="number-of-pages">Pages</label>
-      <input
-        type="text"
-        name="number-of-pages"
-        id="number-of-pages"
-        placeholder="Number of pages"
-      />
-      <div class="switch-wrapper">
-        <label for="read-or-not">Already read?</label>
-        <label class="switch">
-          <input name="read-or-not" id="read-or-not" type="checkbox" />
-          <span class="slider round"></span>
-        </label>
+        <label for="book-title">Title</label>
+        <input
+          type="text"
+          name="book-title"
+          id="book-title"
+          placeholder="Book title"
+        />
+        <label for="author-name">Author</label>
+        <input
+          type="text"
+          name="author-name"
+          id="author-name"
+          placeholder="Author name"
+        />
+        <label for="number-of-pages">Pages</label>
+        <input
+          type="text"
+          name="number-of-pages"
+          id="number-of-pages"
+          placeholder="Number of pages"
+        />
+        <div class="switch-wrapper">
+          <label for="read-or-not">Already read?</label>
+          <label class="switch">
+            <input name="read-or-not" id="read-or-not" type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+        </div>
+        <button class="add-book-btn">Add Book</button>
       </div>
-      <button class="add-book-btn">Add Book</button>
     </dialog>
 
     <script src="script.js"></script>
